--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -4,24 +4,29 @@ $dark-text: #3b4252;
 body {
   background-color: #3b4252;
   color: #eceff4;
-  font-size: 16px;
-  padding: 1.5rem;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  height: 100vh;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
-  font-size: 1.8rem;
-  margin: 1.2rem 0 1rem;
+  font-size: 2em;
+  margin: 0.5em 0 1em;
 }
 
 h2 {
-  font-size: 1.4rem;
-  margin: 1.1rem 0 1rem;
+  font-size: 1.4em;
+  margin: 1.1em 0 1em;
 }
 
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  padding: 1.5em;
+  height: calc(100% - 3em);
 
   h1.title {
     text-align: center;
@@ -30,24 +35,44 @@ h2 {
 
 #main {
   display: grid;
-  column-gap: 50px;
+  flex-grow: 1;
   grid-template-columns: 250px 450px 1fr;
 }
 
 .signup-grid {
   display: grid;
+  column-gap: 10px;
   grid-template-columns: 1fr 1fr;
-  column-gap: 15px;
-  row-gap: 20px;
+  padding: 0 5px;
+  row-gap: 10px;
 }
 
-.roster {
+.absence-bench {
+  display: grid;
+  column-gap: 15px;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 5px 0;
+
+  .player {
+    margin-bottom: 3px;
+    text-transform: capitalize;
+
+    &:last-of-type {
+      margin: 0;
+    }
+  }
+  .absence {
+  }
+}
+
+.roster-grid {
   .slot {
-    background-color: $dark-text;
-    border-radius: 20px;
+    align-items: center;
+    background-color: #434c5e;
     display: flex;
     height: 22px;
-    padding: 8px 20px;
+    margin: 1px 0;
+    padding: 2px 10px 2px 0px;
     transition: all 0.3s ease-in-out;
 
     &:hover {
@@ -55,36 +80,82 @@ h2 {
     }
   }
 
-  .comp {
-    display: grid;
-    column-gap: 10px;
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    margin: 25px 0;
-    row-gap: 10px;
-
-    div {
-      align-items: center;
+  .roster {
+    .comp-wrapper {
       display: flex;
-      font-size: 1.3em;
+      flex-direction: row;
+      gap: 10px;
+      justify-content: space-between;
+
+      .comp {
+        display: grid;
+        column-gap: 20px;
+        grid-template-columns: repeat(2, 65px);
+        // justify-items: center;
+        margin: 0 0 10px;
+        row-gap: 5px;
+
+        div {
+          align-items: center;
+          display: flex;
+          font-size: 1.3em;
+        }
+        img {
+          height: 30px;
+          margin-right: 8px;
+          &:nth-child(2n + 1) {
+            float: right;
+          }
+        }
+        span {
+          &:nth-child(2n + 1) {
+            float: left;
+          }
+        }
+      }
+
+      .buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        button {
+          height: 30px;
+          width: 67px;
+        }
+      }
     }
-    img {
-      height: 30px;
-      margin-right: 8px;
+  }
+
+  hr {
+    margin: 1em 0;
+  }
+
+  .bench {
+    .slot {
+      color: #d47a83;
     }
   }
 }
 
 .class-row {
-  margin-bottom: 10px;
-
   .player {
+    background-color: #434c5e;
     display: grid;
-    grid-template-columns: 24px 1fr;
     column-gap: 4px;
+    cursor: pointer;
+    grid-template-columns: 24px 1fr;
     margin: 2px 0;
+    padding: 2px 10px 2px 0px;
+    &:hover {
+      background-color: #2e3440;
 
-    .button {
+      .add-player-button {
+        opacity: 0.7;
+      }
+    }
+
+    .add-player-button {
       align-items: center;
       border-radius: 4px;
       cursor: pointer;
@@ -93,7 +164,7 @@ h2 {
       transition: all 0.3s ease-in-out;
 
       &.inRoster {
-        background-color: #f56c6c;
+        background-color: #d47a83;
         color: $white-text;
         &::before {
           content: "-";
@@ -107,10 +178,6 @@ h2 {
         &::before {
           content: "+";
         }
-      }
-
-      &:hover {
-        opacity: 0.7;
       }
     }
 
@@ -129,13 +196,14 @@ h2 {
 }
 
 .fetch {
+  padding: 0 5px;
   label {
     color: $white-text;
   }
 
   .el-form {
     align-items: center;
-    column-gap: 20px;
+    column-gap: 5px;
     display: grid;
     grid-template-columns: 1fr 92px auto;
   }
@@ -148,10 +216,49 @@ h2 {
   }
 }
 
+.el-tabs__header {
+  margin: 0;
+}
+
+.el-tabs__content {
+  border: 1px solid $white-text;
+  border-top: none;
+  padding: 15px 4px 0;
+}
+
+.el-button--danger {
+  background-color: #d47a83;
+  border-color: #d47a83;
+}
+.el-button--success {
+  background-color: #a3be8c;
+  border-color: #a3be8c;
+  color: $dark-text !important;
+
+  &:hover {
+    background-color: #b3cc9e;
+    border-color: #b3cc9e;
+  }
+
+  &:active {
+    background-color: #b3cc9e;
+    border-color: #b3cc9e;
+  }
+}
+
 .el-tabs__item {
   color: $white-text;
 }
 
-.tools {
+.assignments {
   overflow: scroll;
+}
+
+.flex-tab {
+  display: flex;
+  flex-direction: column;
+
+  .el-tabs__content {
+    flex-grow: 1;
+  }
 }
