--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -140,18 +140,26 @@ h2 {
 
 .class-row {
   .player {
-    background-color: #434c5e;
     display: grid;
     column-gap: 4px;
     cursor: pointer;
-    grid-template-columns: 24px 1fr;
-    margin: 2px 0;
-    padding: 2px 10px 2px 0px;
-    &:hover {
-      background-color: #2e3440;
+    grid-template-columns: 1fr 24px;
+    margin: 3px 0;
 
-      .add-player-button {
-        opacity: 0.7;
+    > div {
+      background-color: #434c5e;
+      border-bottom-right-radius: 4px;
+      border-top-right-radius: 4px;
+      display: grid;
+      column-gap: 4px;
+      grid-template-columns: 1fr 24px;
+
+      &:hover {
+        background-color: #2e3440;
+
+        .add-player-button {
+          opacity: 0.7;
+        }
       }
     }
 
@@ -178,6 +186,31 @@ h2 {
         &::before {
           content: "+";
         }
+      }
+    }
+
+    .bench-player-button {
+      align-items: center;
+      border-radius: 4px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      transition: all 0.3s ease-in-out;
+
+      &::before {
+        content: "B";
+      }
+
+      &:hover {
+        opacity: 0.8;
+      }
+
+      &.onBench {
+        background-color: #d08770;
+      }
+
+      &:not(.onBench) {
+        background-color: #5e81ac;
       }
     }
 
@@ -247,6 +280,10 @@ h2 {
 }
 
 .el-tabs__item {
+  color: #b5bbc5;
+}
+
+.el-tabs__item.is-active {
   color: $white-text;
 }
 
