Updated drag logic to swap places instead of resort, auto bench now respect people already benched

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -79,6 +79,10 @@ h2 {
     &:last-child {
       margin-bottom: 0;
     }
+
+    &.hover {
+      background-color: #2e3440;
+    }
   }
 
   .roster-slot {
